# florence2onnx

./: .gitignore  CMakeLists.txt  Doxyfile  PROJECT_OVERVIEW.md  readme.md
.cache/clangd/index/: box_quantizer.cpp.776E26808AF6C624.idx  box_quantizer.h.9D2EA1503C3793BD.idx  byte_formatter.h.579F96719F681DE8.idx  clip_image_processor.cpp.2B1110B1729D23C3.idx  clip_image_processor.h.EAB7DD5D2D4F76CE.idx  coordinates_quantizer.h.4F0662EECC9CD72B.idx  curl.h.B681931E54665C5A.idx  curlver.h.9A62F6802D543CD4.idx  decoder.cpp.C855639D558D9F19.idx  decoder.h.1E2FE1851BE324D6.idx  decoder_config.h.607F257782EE47DC.idx  easy.h.715786BDAC148429.idx  file_utils.h.94E7BEDA3B6ADA98.idx  florence2.cpp.323AD6C52540ECC2.idx  florence2.h.EB83CCB5675F61D4.idx  florence2_tokenizer.cpp.CC2B20E0718207B1.idx  florence2_tokenizer.h.B18488D08DAE2A18.idx  florence_model_downloader.cpp.FC0610C7F910E848.idx  florence_model_downloader.h.2C4C597B5EF2F18B.idx  header.h.A0DDC9CC12F7A71F.idx  logits_processor.cpp.8AAAD5722F4BE43E.idx  logits_processor.h.BBF59D369072ABC8.idx  logits_sampler.cpp.8A54610E1DF216E9.idx  logits_sampler.h.32F4BDB3D7C36010.idx  model_source.h.9527A6E56F081E0C.idx  multi.h.D96B385D9618A45D.idx  nnapi_provider_factory.h.DEADC2EBC1D5D0B6.idx  onnxruntime_c_api.h.E5AF6C93F9FB3789.idx  onnxruntime_cxx_api.h.B24E41F16AD1A392.idx  onnxruntime_cxx_inline.h.4036901D21D6C617.idx  onnxruntime_float16.h.8BDFD161A6AE7EE1.idx  options.h.6E86AC540A6AF3FA.idx  post_processor.cpp.B40D33B0EB0A9D78.idx  post_processor.h.8807DCCCB8FF65B8.idx  quantization_mode.h.FCD5F0E64AD06B7D.idx  resource_loader.cpp.6BD88158DF8B461C.idx  resource_loader.h.A5DA18AFCA45383B.idx  shared_types.h.E1AFA4295E92CCC9.idx  status.h.FE11DEE0F340798D.idx  stopping_criteria.cpp.A153A9DF18424D08.idx  (+41 more)
include/: shared_types.h
include/downloader/: florence_model_downloader.h  status.h
include/helper/: byte_formatter.h  resource_loader.h  tensor_extension.h  tokens.h
include/model/: clip_image_processor.h  florence2.h  logits_processor.h  logits_sampler.h  model_source.h  stopping_criteria.h  tensor_operation_registry.h
include/post_processing/: box_quantizer.h  coordinates_quantizer.h  decoder.h  decoder_config.h  post_processor.h  quantization_mode.h
include/tokenizer/: florence2_tokenizer.h
include/utils/: file_utils.h
scripts/: build.bat  build.sh  setup_env.bat  setup_env.sh
src/downloader/: florence_model_downloader.cpp
src/helper/: resource_loader.cpp  tensor_extension.cpp
src/model/: clip_image_processor.cpp  florence2.cpp  logits_processor.cpp  logits_sampler.cpp  stopping_criteria.cpp  tensor_operation_registry.cpp
src/post_processing/: box_quantizer.cpp  decoder.cpp  post_processor.cpp
src/tokenizer/: florence2_tokenizer.cpp
tests/: CMakeLists.txt
tests/unit_tests/: test_box_quantizer.cpp  test_byte_formatter.cpp  test_clip_image_processor.cpp  test_coordinates_quantizer.cpp  test_decoder.cpp  test_decoder_config.cpp  test_file_utils.cpp  test_florence2_inference.cpp  test_florence2_tokenizer.cpp  test_florence_model_downloader_basic.cpp  test_florence_model_downloader_implementation.cpp  test_logits_processor.cpp  test_post_processor_hf.cpp  test_post_processor_init.cpp  test_post_processor_parsing_base.cpp  test_resource_loader.cpp  test_sentence_tokenize.cpp  test_shared_types.cpp  test_status.cpp  test_stopping_criteria.cpp  test_tensor_batch.cpp  test_tensor_concatenate.cpp  test_tensor_create.cpp  test_tensor_extension.cpp  test_tensor_format_operations.cpp  test_tensor_inplace.cpp  test_tensor_normalization.cpp  test_tensor_operation_registry.cpp  test_tensor_operations.cpp  test_tensor_size_creation.cpp  test_tokenizer_encode_decode.cpp  test_tokens.cpp
